--- a/GeoStat-Mobile/GeoStat.Droid/Resources/layout/HomeView.axml
+++ b/GeoStat-Mobile/GeoStat.Droid/Resources/layout/HomeView.axml
@@ -15,4 +15,10 @@
         android:text="Reset"
         android:textSize="40dp"
         local:MvxBind="Click ResetTextCommand" />
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Read"
+        android:textSize="40dp"
+        local:MvxBind="Click ReadCommand" />
 </LinearLayout>
