--- a/GeoStat-Mobile/GeoStat.Droid/Resources/layout/HomeView.axml
+++ b/GeoStat-Mobile/GeoStat.Droid/Resources/layout/HomeView.axml
@@ -19,6 +19,12 @@
         android:layout_height="wrap_content"
         android:textSize="40dp"
         local:MvxBind="Text Lng" />
+	<Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Show Map"
+        android:textSize="40dp"
+        local:MvxBind="Click ShowMapCommand" />
 	 <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
