--- a/GeoStat-Mobile/GeoStat.Droid/Resources/layout/RegisterView.axml
+++ b/GeoStat-Mobile/GeoStat.Droid/Resources/layout/RegisterView.axml
@@ -19,7 +19,7 @@
         android:id="@+id/messageTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        local:MvxBind="Visibility Visibility(IsEmailNotValid); Text EmailValidationMessage"/>
+        local:MvxBind="Visibility InvertedVisibility(IsEmailValid); Text EmailValidationMessage"/>
     <EditText
         android:inputType="textPassword"
         android:layout_width="match_parent"
@@ -33,7 +33,7 @@
         android:id="@+id/pswMessageTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        local:MvxBind="Visibility Visibility(IsPasswordNotValid); Text PasswordValidationMessage"/>
+        local:MvxBind="Visibility InvertedVisibility(IsPasswordValid); Text PasswordValidationMessage"/>
     <EditText
         android:inputType="textPassword"
         android:layout_width="match_parent"
@@ -48,7 +48,7 @@
         android:id="@+id/pswCnfMessageTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        local:MvxBind="Visibility Visibility(IsRepeatedPasswordNotValid); Text PasswordEqualityMessage"/>
+        local:MvxBind="Visibility InvertedVisibility(IsRepeatedPasswordValid); Text PasswordEqualityMessage"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
